1568 timecode cutoff fix

--- a/public/css/newsmax.scss
+++ b/public/css/newsmax.scss
@@ -480,10 +480,10 @@ ul#subMenu{
   #timecode{
     font: 19px;
     color: $dark;
-    font-weight: bold;
     position:absolute;
-    bottom:95px;
-    left:1196px;
+    bottom:99px;
+    left:1190px;
+    font-family: Helvetica, Arial, sans-serif;
   }
 
   #trickPlayContainer{
